@@ -69,6 +69,7 @@ extern "C" {
   int vwcs_insertvr(vwcs *p, size_t index, const vwcs *q, size_t qi);
   int vwcs_insertv(vwcs *p, size_t index, const vwcs *q);
   void vwcs_elide(vwcs *, size_t index, size_t);
+  void vwcs_truncate(vwcs *, size_t index);
   int vwcs_appendf(vwcs *p, const wchar_t *fmt, ...);
   int vwcs_appendvin(vwcs *p, const vwcs *q, size_t qi, size_t qn);
   int vwcs_appendvrn(vwcs *p, const vwcs *q, size_t qi, size_t qn);
