@@ -87,6 +87,18 @@ char *vstr_splice(vstr *p, size_t index, size_t n)
   return p->base + index;
 }
 
+void vstr_truncate(vstr *p, size_t index)
+{
+  if (index >= p->len) return;
+  p->len = index;
+  if (p->len < p->cap / 4u) {
+    size_t nc = (p->len + 3u) / 4u * 5u;
+    assert(nc >= p->len);
+    if (!setcap(p, nc))
+      assert(0);
+  }
+}
+
 void vstr_elide(vstr *p, size_t index, size_t n)
 {
   if (index >= p->len) return;
@@ -98,7 +110,8 @@ void vstr_elide(vstr *p, size_t index, size_t n)
   if (p->len < p->cap / 4u) {
     size_t nc = (p->len + 3u) / 4u * 5u;
     assert(nc >= p->len);
-    assert(setcap(p, nc));
+    if (!setcap(p, nc))
+      assert(0);
   }
 }
 
