@@ -1,3 +1,6 @@
+Added truncate functions to vstr and vwcs.
+
+
 2006-10-25 1.2.0
 
 Multitype C hash table added.
